@@ -749,6 +749,7 @@
 17) kernel: net: tcp: fix tcp fin memory accounting.<br>
 18) kernel: net: increase sk_[max_]ack_backlog.<br>
 19) kernel: net: validate the range we feed to iov_iter_init() in sys_sendto/sys_recvfrom.<br>
+20) kernel: net: separate the close_list and the unreg_list.<br>
 <br>
 <br>
 <b>TODO:</b><br>
